cmake_minimum_required(VERSION 3.16)

project(HyperInstaller C ASM_NASM)

set(OUTPUT_DIRECTORY                       "${CMAKE_CURRENT_SOURCE_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY         "${OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   "${OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   "${OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   "${OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")

set(STAGE_PATHS "")

if (WIN32)
    set(NASM_FORMAT "-fwin64")
elseif (UNIX)
    set(NASM_FORMAT "-felf64")
elseif (APPLE)
    set(NASM_FORMAT "-fmacho64")
endif ()

if (NOT MBR_PATH)
    message(FATAL_ERROR "MBR_PATH must be specified")
endif ()

if (NOT STAGE2_PATH)
    message(FATAL_ERROR "STAGE2_PATH must be specified")
endif ()

set(STAGE_PATHS "${STAGE_PATHS} -DMBR_PATH='\"${MBR_PATH}\"'")
set(STAGE_PATHS "${STAGE_PATHS} -DSTAGE2_PATH='\"${STAGE2_PATH}\"'")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
set(CMAKE_ASM_NASM_FLAGS "${CMAKE_ASM_NASM_FLAGS} ${STAGE_PATHS} ${NASM_FORMAT}")
set(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <FLAGS> -o <OBJECT> <SOURCE>")

add_executable(hyper_install hyper_install.c embedded.asm)
